$Id$                       -*-text-*-


**** 1.16 [unreleased]

Feature
	Add covered() and match() instance methods with similar
	semantics to those in NSEC3.

Feature
	New NSEC3 encloser() method searches for closest encloser.


**** 1.15 Feb 9, 2018

	GOST R 34.11-94 hash algorithm: end of life 1st Jan 2018
	per sunset clause in successor standard GOST R 34.11-2012.
	Digest::GOST removed from the recommended module metadata,
	but will still be used if available.


**** 1.14 Dec 15, 2017

Fix rt.cpan.org #123702

	'use base' should not be used in packages with several
	subpackages defined

Fix rt.cpan.org #123676

	Net::DNS::Nameserver malformed message on big axfr


**** 1.13 Oct 18, 2017

Feature IDN query support

	Queries for domain names containing non-ASCII characters are
	now possible on Unicode platforms using CPAN Net::LibIDN2


**** 1.12 Aug 18, 2017

Fix rt.cpan.org #122586

	Persistent UDP reports false timeouts

Fix rt.cpan.org #122352

	bgsend(): TCP retry can stall for IO::Socket::IP before 0.38

Feature
	CDS / CDNSKEY: Implement RFC8078 erratum 5049.


**** 1.11 Jun 26, 2017

Fix rt.cpan.org #122138

	Send a UDP query with udppacketsize=512

Feature
	Extract default resolver configuration from OS/390 MVS datasets.
	Thanks to Sandra Carroll and Yaroslav Kuzmin for their assistance.


**** 1.10 May 5, 2017

Fix rt.cpan.org #120748

	Net::DNS::Resolver::MSWin32 critical issue
	Thanks to Dmytro Zagashev for his valuable assistance during
	the investigation which exposed five distinct issues.

Feature rt.cpan.org #18819

	Perl 5.22.0 puts EBCDIC character encoding back on the agenda.
	Thanks to Yaroslav Kuzmin for successful test build on os390.


**** 1.09 March 24, 2017

Fix rt.cpan.org #120542

	Fails tests when no "." in @INC

Fix rt.cpan.org #120470

	Fragmented TCP length not correctly reassembled

Feature rt.cpan.org #75357

	Add mechanism to encode/decode EDNS option octet strings


**** 1.08 February 20, 2017

Fix rt.cpan.org #120208
